Floating toolbar now sticks to the top of the page, and related z-index fixes

--- a/styles/components/FloatingToolbar.scss
+++ b/styles/components/FloatingToolbar.scss
@@ -18,6 +18,19 @@
   height: 3rem;
   flex-grow: 1;
   text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.wcp-floating-toolbar.wcp-floating-toolbar--stick-to-top {
+  border-radius: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin-top: 0;
+  width: 100%;
+  z-index: $z-index-overlay;
+  transition: all 0.2s ease-in-out;
 }
 
 .wcp-floating-toolbar__button-container {
