--- a/styles/components/Stories.scss
+++ b/styles/components/Stories.scss
@@ -156,7 +156,7 @@
   padding: 0.3125rem;
   padding-top: 0.4375rem;
   align-self: center;
-  z-index: $z-index-overlay;
+  z-index: $z-index-base;
   filter: drop-shadow(0 1px 8px $color-black);
 }
 
